# Damask

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Damask/: CMakeLists.txt  Damask.cpp  ast.cpp  ast.h  astbuilder.cpp  astbuilder.h  compilationcontext.cpp  compilationcontext.h  executioncontext.cpp  executioncontext.h  lexer.cpp  test.dam
Damask/ast/: astbuilder.cpp  branchnode.cpp  branchnode.h  compilationcontext.cpp  compilationcontext.h  functioncallnode.cpp  functioncallnode.h  instructionsequencenode.cpp  instructionsequencenode.h  lexer.cpp  lexer.h  loopnode.cpp  loopnode.h  node.cpp  node.h  operatornode.cpp  operatornode.h  rawvaluenode.cpp  rawvaluenode.h  variabledeclarationnode.cpp  variabledeclarationnode.h
Damask/ast/node/: branchnode.cpp  branchnode.h  functioncallnode.cpp  functioncallnode.h  functiondeclarationnode.cpp  functiondeclarationnode.h  instructionsequencenode.cpp  instructionsequencenode.h  loopnode.cpp  loopnode.h  node.cpp  operatornode.cpp  operatornode.h  rawvaluenode.cpp  rawvaluenode.h  variabledeclarationnode.cpp  variabledeclarationnode.h
Damask/ast/node/visitor/: astdebugexecutor.cpp  astdebugexecutor.h  astdisplayer.cpp  astdisplayer.h
Damask/ast/visitor/: astdebugexecutor.cpp  astdebugexecutor.h  astdisplayer.cpp  astdisplayer.h  astvisitor.h
Damask/compiler/: astbuilder.cpp  astbuilder.h  compilationcontext.cpp  compilationcontext.h  lexer.cpp
Damask/compiler/ast/: branchnode.cpp  branchnode.h  functioncallnode.cpp  functioncallnode.h  functiondeclarationnode.cpp  functiondeclarationnode.h  instructionsequencenode.cpp  instructionsequencenode.h  loopnode.cpp  loopnode.h  node.cpp  operatornode.cpp  operatornode.h  rawvaluenode.cpp  rawvaluenode.h  variabledeclarationnode.cpp  variabledeclarationnode.h
Damask/compiler/ast/visitor/: astdebugexecutor.cpp  astdebugexecutor.h  astdisplayer.cpp  astdisplayer.h  astvisitor.h
Damask/virtualmachine/: instructions.cpp  instructions.h  vmbinarycompiler.cpp  vmbinarycompiler.h  vmcontext.cpp  vmcontext.h
